...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:flexWrap="wrap"
            app:justifyContent="space_around">

            <LinearLayout
                android:id="@+id/enenDrinken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <be.ardu.scoutsardu.utilities.FontAwesomeTextViewSolid
                    style="@style/fontAwesomeMenuItem"
...
