...
            android:layout_height="wrap_content"
            android:text="@string/mijn_historiek"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

        <Button
            android:id="@+id/stamHistoriek"
            style="@style/defaultButtonColored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stam_historiek"
            app:layout_constraintBottom_toBottomOf="@+id/mijnHistoriek"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:text="@string/data_ophalen_mislukt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/winkelwagens"
            style="@style/defaultRecycleView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mijnHistoriek" />
...
